Kubernetes/Lamp/Kubernetes lamp DC/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: klant1
  labels:
    component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
        - image: mysql:latest
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: database
              mountPath: /var/lib/mysql
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database
