Kubernetes/Lamp/Kubernetes lamp DC/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: klant1
  labels:
    component: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      component: phpmyadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: phpmyadmin
    spec:
      containers:
        - image: phpmyadmin
          name: phpmyadmin
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - mountPath: /usr/local/etc/php/conf.d/php-phpmyadmin.ini
              name: phpmyadmin
      restartPolicy: Always
      volumes:
        - name: phpmyadmin
          persistentVolumeClaim:
            claimName: phpmyadmin
