Kubernetes/Lamp/Kubernetes lamp DC/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-klant1
  namespace: klant1
  labels:
    component: webserver-klant1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: webserver-klant1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: webserver-klant1
    spec:
      containers:
        - image: php:8.1.19-apache
          name: php-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: webserver-klant1
              mountPath: /var/www
      restartPolicy: Always
      volumes:
        - name: webserver-klant1
          persistentVolumeClaim:
            claimName: webserver-klant1
