Kubernetes/Lamp/Kubernetes lamp DC/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: klant1
  labels:
    component: database
spec:
  ports:
    - name: database
      port: 3306
      targetPort: 3306
  selector:
    component: database
