Kubernetes/Lamp/Kubernetes lamp DC/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: klant1
  labels:
    component: phpmyadmin
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 80
    - name: https
      port: 8081
      targetPort: 443
  selector:
    component: phpmyadmin
