Kubernetes/Lamp/Kubernetes lamp DC/sftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp-klant1
  namespace: klant1
spec:
  type: NodePort
  ports:
    - port: 22
      targetPort: 22
      protocol: TCP
      nodePort: 30001
  selector:
    component: sftp
