Kubernetes/Lamp/Kubernetes lamp DC/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: klant1
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: webserver
